@@ -22,6 +22,8 @@ set(kblackbox_SRCS
 
 kde4_automoc(${kblackbox_SRCS})
 
+kde4_add_kcfg_files(kblackbox_SRCS kbbprefs.kcfgc )
+
 kde4_add_executable(kblackbox ${kblackbox_SRCS})
 
 target_link_libraries(kblackbox  ${KDE4_KDEUI_LIBS} kdegames )
