@@ -1,0 +1,5 @@
+# Code generation options for kconfig_compiler
+File=kblackbox.kcfg
+ClassName=KBBPrefs
+Singleton=true
+Mutators=true
